# cat-cog

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/cat_cog/: __about__.py  __init__.py  cerad.py
src/catcog/: __about__.py  cerad.py
